--- a/auction/index.htm
+++ b/auction/index.htm
@@ -22,22 +22,14 @@ iframe{
 
 </style>
 
-<script>
-function fillFields(){
-  document.getElementById("widget1address").value = "ENTER HTML1 ADDRESS HERE";
-  document.getElementById("widget2address").value = "ENTER HTML2 ADDRESS HERE";
-}
-
-document.addEventListener('DOMContentLoaded', fillFields(), false);
-</script>
 <div><button class="btn" onclick="window.open('https://script.google.com/macros/s/AKfycbyGbbntxe3BwWrzRFSB19f0EVdzxokbuRol8MBHIHhPUNbgGtg/exec','window','toolbar=no, menubar=no, resizable=yes, location=no, height=800, width=362')">Панель управления</button></div>
 
 <div>
-<div><input class="form-control input-md" id="widget1address" readonly="readonly"><div>
+<div><input class="form-control input-md" readonly="readonly" value = "ENTER FIRST WIDGET ADDRESS"><div>
 <iframe></iframe>
 </div>
 
 <div>
-<div><input class="form-control input-md" id="widget2address" readonly="readonly"><div>
+<div><input class="form-control input-md" readonly="readonly" value = "ENTER FIRST WIDGET ADDRESS"><div>
 <iframe></iframe>
 </div>
