--- a/auction/timerwidget.htm
+++ b/auction/timerwidget.htm
@@ -30,6 +30,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 	display: inline-block;
 }
 .msec{
+  top:10px;
   font-size:60px;
 }
 </style>
