--- a/auction/timerwidget.htm
+++ b/auction/timerwidget.htm
@@ -38,15 +38,16 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 <script>
-var url = "https://docs.google.com/a/google.com/spreadsheets/d/11_oiiAzSAXz-uotsiZbL0U9UAlMJ5-Wm1FBZF1YdOZ0/gviz/tq?tq=select%20B";
+var url = "https://sheets.googleapis.com/v4/spreadsheets/1xsOHW4UrgdUorqwspuUMcOQwMWDPdplmCB88O7YMmnc/values/timersheet!B:B?access_token=Glv_Ay4oWIl6aDQ40eJVYfr2UkCHlEWPzSDJ2_UzqgKUGivdyxArVHmEDwev2qvBcs8VoaWlVA7V2yCfZMTq6qYHthuDB_JPXRTBg8LFzONxJnzR1R3ksjmCsPYE&key=AIzaSyCloJr1i8l4tl67tuYFqDmi_HoRxRn0FYg";
 var lastupd = -1;
 function unwrap(s){
 	return s.substring(0,s.indexOf('"'));
 }
 function update(){
 $.get(url, function( data ) {
-  var val = parseInt(data.table.rows[0].c[0].v);
-  var state = parseInt(data.table.rows[1].c[0].v);
+  var parts = data.values;
+	var val = parseInt(parts[0][0]);
+  var state = parseInt(parts[1][0]);
   var dt = 0;
   if(state === "0")
   {
