--- a/auction/timerwidget.htm
+++ b/auction/timerwidget.htm
@@ -39,7 +39,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
 <script>
 var url = "https://spreadsheets.google.com/tq?key=11_oiiAzSAXz-uotsiZbL0U9UAlMJ5-Wm1FBZF1YdOZ0&tqx=out:json";
-url = "https://docs.google.com/spreadsheets/d/11_oiiAzSAXz-uotsiZbL0U9UAlMJ5-Wm1FBZF1YdOZ0/gviz/tq?tqx=out:json";
+//url = "https://docs.google.com/spreadsheets/d/11_oiiAzSAXz-uotsiZbL0U9UAlMJ5-Wm1FBZF1YdOZ0/gviz/tq?tqx=out:json";
 var lastupd = -1;
 
 function update(){
