--- a/auction/timerwidget.htm
+++ b/auction/timerwidget.htm
@@ -38,14 +38,16 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 <script>
-var url = "https://spreadsheets.google.com/tq?key=11_oiiAzSAXz-uotsiZbL0U9UAlMJ5-Wm1FBZF1YdOZ0&tqx=out:json";
+var url = "https://spreadsheets.google.com/tq?key=11_oiiAzSAXz-uotsiZbL0U9UAlMJ5-Wm1FBZF1YdOZ0&tqx=out:csv";
 //url = "https://docs.google.com/spreadsheets/d/11_oiiAzSAXz-uotsiZbL0U9UAlMJ5-Wm1FBZF1YdOZ0/gviz/tq?tqx=out:json";
 var lastupd = -1;
 
 function update(){
 $.get(url, function( data ) {
-  var val = parseInt(data.table.rows[0].c[1].v);
-  var state = parseInt(data.table.rows[1].c[1].v);
+  var arr = data.split(",");
+  console.log(arr);
+  var val = parseInt(arr[1]);
+  var state = parseInt(arr[4]);
   console.log(val+" "+state);
   var dt = 0;
   if(state === "0")
