--- a/auction/timerwidget.htm
+++ b/auction/timerwidget.htm
@@ -50,7 +50,7 @@ $.get(url, function( data ) {
   var state = parseInt(arr[4]);
   console.log(val+" "+state);
   var dt = 0;
-  if(state === "0")
+  if(state === 0)
   {
     dt = val;
   }
