--- a/auction/index.htm
+++ b/auction/index.htm
@@ -25,8 +25,8 @@ iframe{
 <div><button class="btn" onclick="window.open('https://script.google.com/macros/s/AKfycbyGbbntxe3BwWrzRFSB19f0EVdzxokbuRol8MBHIHhPUNbgGtg/exec','window','toolbar=no, menubar=no, resizable=yes, location=no, height=800, width=362')">Панель управления</button></div>
 
 <div>
-<div><input class="form-control input-md" readonly="readonly" value = "ENTER FIRST WIDGET ADDRESS"><div>
-<iframe></iframe>
+<div><input class="form-control input-md" readonly="readonly" value = "http://etmad.github.io/auction/timerwidget.htm"><div>
+<iframe src="http://etmad.github.io/auction/timerwidget.htm"></iframe>
 </div>
 
 <div>
