--- a/auction/index.htm
+++ b/auction/index.htm
@@ -30,6 +30,6 @@ iframe{
 </div>
 
 <div>
-<div><input class="form-control input-md" readonly="readonly" value = "ENTER FIRST WIDGET ADDRESS"><div>
-<iframe></iframe>
+<div><input class="form-control input-md" readonly="readonly" value = "http://etmad.github.io/auction/topwidget.htm"><div>
+<iframe src="http://etmad.github.io/auction/topwidget.htm"></iframe>
 </div>
