--- a/auction/index.htm
+++ b/auction/index.htm
@@ -31,5 +31,5 @@ iframe{
 
 <div>
 <div><input class="form-control input-md" readonly="readonly" value = "http://etmad.github.io/auction/topwidget.htm"><div>
-<iframe src="http://etmad.github.io/auction/topwidget.htm"></iframe>
+<iframe src="http://etmad.github.io/auction/topwidget.htm" height=500></iframe>
 </div>
