--- a/auction/index.htm
+++ b/auction/index.htm
@@ -5,25 +5,25 @@ div{
 }
 
 button{
-  width:430px;
+  width:420px;
   background-color:#88f;
   margin-top:3px;
 }
 
 input{
-  width:430px !important;
+  width:420px !important;
   margin-top:3px;
 }
 
 iframe{
-  width:430px;
+  width:420px;
   margin-top:3px;
 }
 
 </style>
 
 <div><button class="btn" onclick="window.open('https://script.google.com/macros/s/AKfycbyGbbntxe3BwWrzRFSB19f0EVdzxokbuRol8MBHIHhPUNbgGtg/exec','window','toolbar=no, menubar=no, resizable=yes, location=no, height=800, width=362')">Панель управления</button></div>
-
+ширина виджетов - 420 пикселей
 <div>
 <div><input class="form-control input-md" readonly="readonly" value = "http://etmad.github.io/auction/timerwidget.htm"><div>
 <iframe src="http://etmad.github.io/auction/timerwidget.htm"></iframe>
