--- a/auction/index.htm
+++ b/auction/index.htm
@@ -23,8 +23,8 @@ iframe{
 </style>
 
 <div><button class="btn" onclick="window.open('https://script.google.com/macros/s/AKfycbyGbbntxe3BwWrzRFSB19f0EVdzxokbuRol8MBHIHhPUNbgGtg/exec','window','toolbar=no, menubar=no, resizable=yes, location=no, height=800, width=362')">Панель управления</button></div>
-<div>ширина виджетов = 420 пикселей</div>
-<div>высота таймера - 140, топа - по 50 пикселей на каждый вариант т.е. топ5 = 250рх, топ10 = 500рх</div>
+<div width=420>ширина виджетов = 420 пикселей</div>
+<div width=420>высота таймера - 140, топа - по 50 пикселей на каждый вариант т.е. топ5 = 250рх, топ10 = 500рх</div>
 
 <div>
 <div><input class="form-control input-md" readonly="readonly" value = "http://etmad.github.io/auction/timerwidget.htm"><div>
