--- a/auction/topwidget2.htm
+++ b/auction/topwidget2.htm
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
   <script src="http://aishek.github.io/jquery-animateNumber/javascripts/jquery.color.js"></script>
   <script src="http://aishek.github.io/jquery-animateNumber/javascripts/jquery.animateNumber.js"></script>
+  <script src="http://aishek.github.io/jquery-animateNumber/javascripts/jquery.color.js"></script>
+  <script src="http://aishek.github.io/jquery-animateNumber/javascripts/jquery.animateNumber.js"></script>
 
   <style>
   div{
