--- a/auction/topwidget2.htm
+++ b/auction/topwidget2.htm
@@ -2,6 +2,8 @@
 
 <html>
 <link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
+<script src="https://kimmobrunfeldt.github.io/progressbar.js/bundle.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="http://aishek.github.io/jquery-animateNumber/javascripts/jquery.color.js"></script>
 <script src="http://aishek.github.io/jquery-animateNumber/javascripts/jquery.animateNumber.js"></script>
   <head>
