--- a/auction/topwidget2.htm
+++ b/auction/topwidget2.htm
@@ -139,13 +139,15 @@ function update(){
 					//newel.setAttribute("value", nvals[i]);
 					newel.innerHTML = "<div class='left'><span>"+nnames[i]+"</span></div> <div class='right'><span style='right:15px;'>0</span></div>";
 					document.body.appendChild(newel);
-					$(newel).first().next().prop('number', 0).animateNumber({ number: nvals[i] },4000);
+					var ue = $(newel).first().next();
+					ue.prop('number', 0).animateNumber({ number: nvals[i] },4000);
 				}
 				else{
 					var modify = document.getElementById(nnames[i]);
-					modify.innerHTML = "<div class='left'><span>"+nnames[i]+"</span></div> <div class='right'><span style='right:15px;'>"+nvals[i]+"</span></div>";
-					$(modify).first().next().prop('number', prevvals[i]).animateNumber({ number: nvals[i] },4000);
-				
+					//modify.innerHTML = "<div class='left'><span>"+nnames[i]+"</span></div> <div class='right'><span style='right:15px;'>"+nvals[i]+"</span></div>";
+					var ue = $(modify).first().next();
+					ue.prop('number', prevvals[i]).animateNumber({ number: nvals[i] },4000);
+					
 					if (prevpos[i] < newpos[i]){	
 						$(modify).animate({top : "+="+((newpos[i]-prevpos[i])*50)+"px", backgroundColor : "#e8888e"}, 2000);
 					}
