--- a/auction/topwidget2.htm
+++ b/auction/topwidget2.htm
@@ -137,9 +137,9 @@ function update(){
 					//count++;
 					newel.setAttribute("style", "top:"+(50*newpos[i])+"px; animation: blink 2s;");
 					//newel.setAttribute("value", nvals[i]);
-					newel.innerHTML = "<div class='left'><span>"+nnames[i]+"</span></div> <div class='right'><span style='right:15px;'>0</span></div>";
+					newel.innerHTML = "<div class='left'><span>"+nnames[i]+"</span></div> <div class='right'><span style='right:15px;'>"+nvals[i]+"</span></div>";
 					document.body.appendChild(newel);
-					setTimeout(goSmooth, 900, $(newel), nvals[i]);
+					//setTimeout(goSmooth, 900, $(newel), nvals[i]);
 				}
 				else{
 					var modify = document.getElementById(nnames[i]);
