--- a/auction/topwidget2.htm
+++ b/auction/topwidget2.htm
@@ -130,13 +130,13 @@ function update(){
 					//newel.setAttribute("value", nvals[i]);
 					newel.innerHTML = "<div class='left'><span>"+nnames[i]+"</span></div> <div class='right'><span style='right:15px;'>"+nvals[i]+"</span></div>";
 					document.body.appendChild(newel);
-					//setTimeout(goSmooth, 900, $(newel), nvals[i]);
+					setTimeout(goSmooth, 100, $(newel), nvals[i]);
 				}
 				else{
 					var modify = document.getElementById(nnames[i]);
 					//modify.innerHTML = "<div class='left'><span>"+nnames[i]+"</span></div> <div class='right'><span style='right:15px;'>"+nvals[i]+"</span></div>";
 					var ue = $(modify).first().next();
-					ue.prop('number', prevvals[i]).animateNumber({ number: nvals[i] });
+					ue.first().next().prop('number', prevvals[i]).animateNumber({ number: nvals[i] });
 					
 					if (prevpos[i] < newpos[i]){	
 						$(modify).animate({top : "+="+((newpos[i]-prevpos[i])*50)+"px", backgroundColor : "#e8888e"}, 2000);
