--- a/auction/topwidget2.htm
+++ b/auction/topwidget2.htm
@@ -135,7 +135,7 @@ function update(){
 				else{
 					var modify = document.getElementById(nnames[i]);
 					//modify.innerHTML = "<div class='left'><span>"+nnames[i]+"</span></div> <div class='right'><span style='right:15px;'>"+nvals[i]+"</span></div>";
-					var ue = $(modify).first().next();
+					var ue = $(modify).first().next().first();
 					ue.first().next().prop('number', prevvals[i]).animateNumber({ number: nvals[i] });
 					
 					if (prevpos[i] < newpos[i]){	
@@ -166,7 +166,7 @@ function update(){
 }
 
   function goSmooth(x, govalue){
-	  x.first().next().prop('number', 0).animateNumber({ number: govalue },4000);
+	  x.first().next().first().prop('number', 0).animateNumber({ number: govalue },4000);
   }
 	
   function colorBack(){
