--- a/auction/topwidget2.htm
+++ b/auction/topwidget2.htm
@@ -136,7 +136,7 @@ function update(){
 					var modify = document.getElementById(nnames[i]);
 					//modify.innerHTML = "<div class='left'><span>"+nnames[i]+"</span></div> <div class='right'><span style='right:15px;'>"+nvals[i]+"</span></div>";
 					var ue = $(modify).first().next().first();
-					ue.first().next().prop('number', prevvals[i]).animateNumber({ number: nvals[i] });
+					ue.children().next().children().prop('number', prevvals[i]).animateNumber({ number: nvals[i] });
 					
 					if (prevpos[i] < newpos[i]){	
 						$(modify).animate({top : "+="+((newpos[i]-prevpos[i])*50)+"px", backgroundColor : "#e8888e"}, 2000);
@@ -167,7 +167,7 @@ function update(){
 
   function goSmooth(x, govalue){
 	  console.log(x.first().next().first().html());
-	  x.first().next().first().prop('number', 0).animateNumber({ number: govalue },4000);
+	  x.children().next().children().prop('number', 0).animateNumber({ number: govalue },4000);
   }
 	
   function colorBack(){
