--- a/auction/topwidget2.htm
+++ b/auction/topwidget2.htm
@@ -134,7 +134,7 @@ function update(){
 				}
 				else{
 					var modify = document.getElementById(nnames[i]);
-					modify.innerHTML = "<div class='left'><span>"+nnames[i]+"</span></div> <div class='right'><span style='right:15px;'>"+prevvals[i]+"</span></div>";
+					//modify.innerHTML = "<div class='left'><span>"+nnames[i]+"</span></div> <div class='right'><span style='right:15px;'>"+prevvals[i]+"</span></div>";
 					var ue = $(modify).first().next().first();
 					ue.children().next().children().prop('number', prevvals[i]).animateNumber({ number: nvals[i] });
 					
