--- a/auction/topwidget2.htm
+++ b/auction/topwidget2.htm
@@ -134,9 +134,9 @@ function update(){
 				}
 				else{
 					var modify = document.getElementById(nnames[i]);
-					//modify.innerHTML = "<div class='left'><span>"+nnames[i]+"</span></div> <div class='right'><span style='right:15px;'>"+prevvals[i]+"</span></div>";
-					var ue = $(modify).first().next().first();
-					ue.children().next().children().prop('number', vals[i]).animateNumber({ number: nvals[i] });
+					modify.innerHTML = "<div class='left'><span>"+nnames[i]+"</span></div> <div class='right'><span style='right:15px;'>"+vals[i]+"</span></div>";
+					var ue = $(modify).children().next().children();
+					ue.prop('number', vals[i]).animateNumber({ number: nvals[i] });
 					
 					if (prevpos[i] < newpos[i]){	
 						$(modify).animate({top : "+="+((newpos[i]-prevpos[i])*50)+"px", backgroundColor : "#e8888e"}, 2000);
