--- a/pierre_chat.htm
+++ b/pierre_chat.htm
@@ -1,2 +1,2 @@
-<iframe src="player.twitch.tv/?channel=pierre_dunn" style="width:calc(100%-420px); height:100%; position:fixed; left:0px; top:0px;"></iframe>
-<iframe src="http://www.twitch.tv/etozhemad/chat?popout=" style="width:420px; height:100%; position:fixed; left:405px; top:0px;"></iframe>
+<iframe src="http://player.twitch.tv/?channel=pierre_dunn" style="width:calc(100%-420px); height:100%; position:fixed; left:0px; top:0px;"></iframe>
+<iframe src="http://www.twitch.tv/etozhemad/chat?popout=" style="width:420px; height:100%; position:fixed; right:0px; top:0px;"></iframe>
