--- a/pierre_chat.htm
+++ b/pierre_chat.htm
@@ -1,2 +1,3 @@
-<iframe src="http://player.twitch.tv/?channel=pierre_dunn" style="width:calc(~'100%-420px'); height:100%; position:fixed; left:0px; top:0px;"></iframe>
+<body style="position:relative"><iframe src="http://player.twitch.tv/?channel=pierre_dunn" style="position:absolute; top:0px; right:405px; width:100%; height:100%;"></iframe>
 <iframe src="http://www.twitch.tv/etozhemad/chat?popout=" style="width:420px; height:100%; position:fixed; right:0px; top:0px;"></iframe>
+</body>
