--- a/pierre_chat.htm
+++ b/pierre_chat.htm
@@ -1,3 +1,6 @@
-<body style="position:relative"><iframe src="http://player.twitch.tv/?channel=pierre_dunn" style="position:absolute; top:0px; right:405px; width:100%; height:100%;"></iframe>
+<body>
+<div style="width:calc(100%-420px); height:100%;">
+<iframe src="http://player.twitch.tv/?channel=pierre_dunn"></iframe>
+</div>
 <iframe src="http://www.twitch.tv/etozhemad/chat?popout=" style="width:420px; height:100%; position:fixed; right:0px; top:0px;"></iframe>
 </body>
