--- a/pierre_chat.htm
+++ b/pierre_chat.htm
@@ -1,3 +1,9 @@
+<style>
+  div{
+    width: calc(~'(100% - 420px)');
+    height: 100%;
+  }
+</style>
 <body>
 <div style="width:calc(100%-420px); height:100%;">
 <iframe src="http://player.twitch.tv/?channel=pierre_dunn"></iframe>
