--- a/pierre_chat.htm
+++ b/pierre_chat.htm
@@ -5,7 +5,7 @@
   }
 </style>
 <body>
-<div style="width:calc(100%-420px); height:100%;">
+<div>
 <iframe src="http://player.twitch.tv/?channel=pierre_dunn"></iframe>
 </div>
 <iframe src="http://www.twitch.tv/etozhemad/chat?popout=" style="width:420px; height:100%; position:fixed; right:0px; top:0px;"></iframe>
