--- a/pierre_chat.htm
+++ b/pierre_chat.htm
@@ -1,6 +1,8 @@
 <style>
   div{
-    width: calc(~'(100% - 420px)');
+    width: -webkit-calc(100% - 420px);
+    width: -moz-calc(100% - 420px);
+    width: calc(100% - 420px);
     height: 100%;
   }
 </style>
