--- a/pierre_chat.htm
+++ b/pierre_chat.htm
@@ -5,6 +5,10 @@
     width: calc(100% - 420px);
     height: 100%;
   }
+  iframe{
+    width: 100%;
+    height: 100%;
+  }
 </style>
 <body>
 <div>
