--- a/pierre_chat.htm
+++ b/pierre_chat.htm
@@ -4,6 +4,7 @@
     width: -moz-calc(100% - 420px);
     width: calc(100% - 420px);
     height: 100%;
+    position: fixed;
   }
   iframe{
     width: 100%;
