--- a/pierre_chat.htm
+++ b/pierre_chat.htm
@@ -11,7 +11,10 @@
     height: 100%;
   }
   body{
-    margin: 0px;
+    margin: -2px;
+  }
+  body, html {
+  overflow: hidden;
   }
 </style>
 <body>
