--- a/mikle/index.htm
+++ b/mikle/index.htm
@@ -10,27 +10,37 @@
 	height: -webkit-calc(100% - 40px);
     height: -moz-calc(100% - 40px);
     height: calc(100% - 40px);
-	border-bottom: solid;
+	position:absolute;
   }
   
   .info{
     bottom: 0;
 	height: 40px;
 	position: fixed;
+	border-top: solid;
+	background-color: white;
   }
   
   .message{
-      text-align: right;
-	  width: 75%;
-	  display: inline;
-	  position: absolute;
-	  border-bottom: thin solid #cccccc;
+	display: inline;
+	right:15px;
+	vertical-align: middle;
+	text-align: right;
+	vertical-align: middle;
+	background-color:transparent;
+	width: 75%;
+	position: absolute;
+	border-bottom: thin solid #cccccc;
   }
   
   .time{
-      text-align: right;
-	  width: 20%;
-	  display:inline;
+	display: inline;
+	text-align: right;
+	width: 20%;
+	margin-left:15px;
+	height: 100%;
+	vertical-align: middle;
+	text-align:left;
   }
   
   .record{
