--- a/pierre_chat.htm
+++ b/pierre_chat.htm
@@ -1,22 +1,23 @@
 <style>
-  div{
-    width: -webkit-calc(100% - 420px);
-    width: -moz-calc(100% - 420px);
-    width: calc(100% - 420px);
-    height: 100%;
-    position: fixed;
-  }
-  iframe{
-    border: none;
-    width: 100%;
-    height: 100%;
-  }
-  body{
-    margin: -2px;
-  }
-  body, html {
-  overflow: hidden;
-  }
+    body, html {
+      overflow: hidden;
+    }
+
+    div {
+      width: -webkit-calc(100% - 420px);
+      width: -moz-calc(100% - 420px);
+      width: calc(100% - 420px);
+      height: 100%;
+      position: fixed;
+      left: 0;
+      top: 0;
+    }
+
+    iframe {
+      border: none;
+      width: 100%;
+      height: 100%;
+    }
 </style>
 <body>
 <div>
