--- a/auction/timerwidget.htm
+++ b/auction/timerwidget.htm
@@ -38,7 +38,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 <script>
-var url = "https://spreadsheets.google.com/tq?key=11_oiiAzSAXz-uotsiZbL0U9UAlMJ5-Wm1FBZF1YdOZ0&tqx=out:csv";
+var url = "https://crossorigin.me/https://spreadsheets.google.com/tq?key=11_oiiAzSAXz-uotsiZbL0U9UAlMJ5-Wm1FBZF1YdOZ0&tqx=out:csv";
 //url = "https://docs.google.com/spreadsheets/d/11_oiiAzSAXz-uotsiZbL0U9UAlMJ5-Wm1FBZF1YdOZ0/gviz/tq?tqx=out:json";
 var lastupd = -1;
 
