--- a/auction/topwidget.htm
+++ b/auction/topwidget.htm
@@ -60,7 +60,7 @@ var names = [];
 var vals  = [];
 var pos = [];
 
-var url = "https://spreadsheets.google.com/tq?key=1xsOHW4UrgdUorqwspuUMcOQwMWDPdplmCB88O7YMmnc&tqx=out:csv";
+var url = "https://crossorigin.me/https://spreadsheets.google.com/tq?key=1xsOHW4UrgdUorqwspuUMcOQwMWDPdplmCB88O7YMmnc&tqx=out:csv";
 
 function update(){
 	
