--- a/mikle/my_fork.htm
+++ b/mikle/my_fork.htm
@@ -163,5 +163,5 @@
 </div>
 <div class="info">
 </div>
-<iframe src="http://www.twitch.tv/mikleblr/chat?popout=" style="width:420px; height:100%; position:fixed; right:0px; top:0px;"></iframe>
+<iframe src="http://www.twitch.tv/grigory_skovoroda/chat?popout=" style="width:420px; height:100%; position:fixed; right:0px; top:0px;"></iframe>
 </body>
