--- a/RGGfolowercount.htm
+++ b/RGGfolowercount.htm
@@ -31,10 +31,10 @@
 <div class="colored" id="middle" style="display:inline-block; width:56px;">&nbsp;</div>
 <div class="colored" id="req" style="display:inline-block; width:166px;">20</div>
 </div>
-<div class="colored" style="font-size:72px; width:500px; text-align:center;">
+<div class="colored" style="font-family: sans-serif;font-weight:bold;font-size:72px; width:500px; text-align:center;">
 фолловеров
 </div>
-<div class="colored" style="font-size:72px; width:500px; text-align:center;">
+<div class="colored" style="font-family: sans-serif;font-weight:bold;font-size:72px; width:500px; text-align:center;">
 до плюс игры
 </div>
 
