--- a/ayr/onedigitvote.htm
+++ b/ayr/onedigitvote.htm
@@ -72,8 +72,7 @@
     
   //if(msg.lastIndexOf(":grigory_skovoroda!grigory_skovoroda@grigory_skovoroda.tmi.twitch.tv PRIVMSG #fua88 :!add ", 0) === 0){
 		var cmd = msg.substring(msg.lastIndexOf("PRIVMSG #zhem4uzhinka :")+23);
-		console.log(cmd);
-    		if(cmd.length==1)
+		if(cmd.length === 1)
 		{
 		cmd = cmd.trim();
 		var q = 1;
