--- a/timerdigital.htm
+++ b/timerdigital.htm
@@ -53,7 +53,7 @@ h1{
 
 <script>
 function getTimeRemaining(endtime) {
-  var t = Date.parse(new Date()) - Date.parse(endtime) ;
+  var t = Math.abs(Date.parse(new Date()) - Date.parse(endtime));
   var seconds = Math.floor((t / 1000) % 60);
   var minutes = Math.floor((t / 1000 / 60) % 60);
   var hours = Math.floor((t / (1000 * 60 * 60)));
