--- a/znd/index.html
+++ b/znd/index.html
@@ -80,7 +80,7 @@ function shiftOne(time){
 		console.log(topv);
 		if(topv==alltop)
 			{
-				$(all[i]).animate({top:lowest+"px"},time,'linear', function() {last--; $(this).style.zIndex = last;});
+				$(all[i]).animate({top:lowest+"px"},time,'linear', function() {console.log("UPD z-index for"); console.log($(this)); last--; $(this).style.zIndex = last;});
 				//console.log("FLOAT DOWN GOES");
 				all[i].setAttribute("value", lowest);
 			}
